pkg/lang/testdata/ub/outputs/invalid/wrapper-missing-value.ub
outputs: {
  bad: { extra: 1 }
}
